# dynamic-comfyui

./: .gitignore  .publish-dockerhub.json  AGENTS.md  Dockerfile  Head-Swap-V1.json  Makefile  README.md  TESTING.md  default-resources.json  default-resources.yaml  dependencies.yaml  help.sh  install.sh  instructions.txt  package-lock.json  package.json  pyproject.toml  refresh-nodes-and-models.sh  requirements.txt  restart-comfyui.sh  run.sh  settings.json  settings.yaml  start-new-project.sh  start.sh  tsconfig.json  update-nodes-and-models.sh
.github/workflows/: dependency-check.yml  docker-promote-latest.yml  docker-publish-manual.yml  smoke-local.yml  smoke-runpod.yml
ComfyUI/: execution.py  requirements.txt
config/: install-manifest.yaml
dependencies/: avatary-image-generator-v1.yaml
handlers/: configure_torch_cuda_allocator.sh  install_or_update_custom_node_cnr.sh  prepare_network_volume_and_start_jupyter.sh  start_comfyui_service.sh
handlers/install/: apply_flash_attn_runtime_hotfix.sh  default_resources_manifest.sh  download_model.sh  download_model_bg.sh  install_comfyui_cli.sh  (+27 more)
projects/: example.json  example.yaml  qwen-image-multiangle-wokflow.json  qwen-image-multiangle-wokflow.yaml
scripts/: deploy-runtime-package.sh  publish-dockerhub.js  publish-dockerhub.ts  release-runtime-package.sh  setup-runpod-ssh.ts  smoke-local.sh  smoke-runpod.sh
tests/: test_cli_parser.py  test_default_manifest_resolution.py  test_install_default_deps_command.py  test_install_deps_settings_volume.py  test_installer_download_completion.py  test_manifests_imports.py
(+31 files in other folders)
