[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "dynamic-comfyui-runtime"
version = "1.11.0"
description = "Python runtime and CLI for Dynamic ComfyUI on RunPod"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Jeremy Tenjo" }
]

[project.scripts]
dynamic-comfyui = "dynamic_comfyui_runtime.cli:main"
dc = "dynamic_comfyui_runtime.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dynamic_comfyui_runtime"]
